final-lab/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
spec:
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      serviceAccountName: pod-reader-service-account
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
        volumeMounts:
          - name: index-html-volume
            mountPath: /usr/share/nginx/html
          - name: cache-volume
            mountPath: /cache
          - name: claim1-volume
            mountPath: /persistent
        resources:
          requests:
            memory: "50Mi"
            cpu: "150m"
          limits:
            memory: "50Mi"
            cpu: "150m"
      imagePullSecrets:
        - name: regcred                
      volumes:
      - name: claim1-volume
        persistentVolumeClaim:
          claimName: claim1
      - name: index-html-volume
        configMap:
          name: index-html
      - name: cache-volume
        emptyDir: {}
