final-lab/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: k8straining
  labels:
    name: k8straining
spec:
  rules:
  - host: k8s.training.com
    http:
      paths:
        - backend:
            serviceName: nginx
            servicePort: 80
